--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.10",
+    "@tailwindcss/forms": "^0.5.3",
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
+    "currency.js": "^2.0.4",
     "next": "12.2.5",
+    "node-fetch": "^3.2.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
+    "react-intl": "^6.2.10",
+    "react-number-format": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.8.0",
+    "@types/react": "^18.0.21",
     "autoprefixer": "^10.4.12",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "financial": "^0.1.3",
     "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.4"
   }
 }
